css/mq.css
@media(max-width:780px) {
    body,
    html{
        height: 100vh;
    }
    .canvas-container {
        width: 360px;
        height: 360px;
    }
    .freq-search {
        width: 540px;
        
    }
    .srch-gallery {
        width: 700px;
    }
    .gallery-container {
        
        grid-template-columns: 1fr 1fr;
    
    }
    .gallery-container{
        height: fit-content;
    }
    .scroll-container {
        overflow: hidden; /* Hides both horizontal and vertical scrollbars */
    }
    
}
.search-gallery-container {
    flex-direction: column;
    gap: 20px;
}
@media (min-width:780px) {

    .main-container {
        grid-template-columns: minmax(16px, 1fr) minmax(auto, 740px) minmax(16px, 1fr);
        
    }
    .search-gallery-container {
        flex-direction: unset;
    }
    .editor-container {
        
        flex-direction: unset;
        
        
    }
    
    .paint-options {
        width: 100%;
        height: 400px;
        
    }
    .freq-search {
        width: 250px;
        font-size: 0.6rem;
    }
    .srch-gallery {
        width: 250px;
    }
   
}

@media (min-width:1300px) {
    .main-container {
        grid-template-columns:   minmax(40px, 1fr) minmax(auto, 1260px) minmax(40px, 1fr);
    }

    .canvas-container {
       
        width: 540px;
        height: 540px;
    }
    .paint-options {
        width: 540px;
        height: 540px;
        
    }
    .freq-search {
        width: 530px;
        font-size: 1.3125rem;
    }
    .srch-gallery {
        width: 530px;
    }

   
}

